@@ -1622,8 +1622,10 @@ static secstring random_password() {
         type++;
         break;
       case '-':
-        if (entropy_needed > 64)
+        if (entropy_needed > 128)
           entropy_needed -= 32;
+        else if (entropy_needed > 64)
+          entropy_needed -= 16;
         else if (entropy_needed > 32)
           entropy_needed -= 8;
         // else you can't go any lower
@@ -1631,6 +1633,8 @@ static secstring random_password() {
       case '+': case '=':
         if (entropy_needed < 64)
           entropy_needed += 8;
+        else if (entropy_needed < 128)
+          entropy_needed += 16; // so we can hit 112, the magic number for WEP keys
         else
           entropy_needed += 32;
         break;
@@ -1639,8 +1643,8 @@ static secstring random_password() {
                "  Y      Yes, accept this password\n"
                "  N      No, generate another password of same type\n"
                "  <space> Cycle through password types\n"
-               "  +      Lower the needed entropy/password length\n"
-               "  -      More entropy/password length\n"
+               "  -      Lower the entropy & password length\n"
+               "  +      Raise the entropy & password length\n"
                "  Q      Quit\n"
                "  ?      Help\n");
         continue;
